[gd_scene load_steps=5 format=3 uid="uid://cjpqjv4bkrjf8"]

[ext_resource type="Texture2D" uid="uid://dnfd0pbcly248" path="res://assets/furniture/button/button.png" id="1_1p86q"]
[ext_resource type="Script" path="res://assets/furniture/button/button.gd" id="1_fcgup"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ieggt"]
size = Vector2(32, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3rmh1"]
size = Vector2(60, 10)

[node name="Button" type="Node2D"]
script = ExtResource("1_fcgup")

[node name="button_sprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture_filter = 1
texture = ExtResource("1_1p86q")

[node name="StaticBody2D" type="StaticBody2D" parent="button_sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="button_sprite/StaticBody2D"]
position = Vector2(0, 7.5)
shape = SubResource("RectangleShape2D_ieggt")

[node name="button_area" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="button_area_collision_shape" type="CollisionShape2D" parent="button_area"]
unique_name_in_owner = true
position = Vector2(0, 24)
shape = SubResource("RectangleShape2D_3rmh1")
